<resources>
    <string name="app_name">Gasolina X Álcool</string>
    <string name="preço_gasolina">Preço da Gasolina R$</string>
    <string name="preço_alcool">Preço do Álcool R$</string>
    <string name="btn_ver">Calcular</string>
    <string name="txt_info">Se o valor do Álcool do posto for menor ou igual ao valor acima, abasteça com alcool, senão use gasolina.</string>
    <string name="calculo">CALCULO PARA ABASTECIMENTO</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="sobre_2">Aplicativo criado para saber se é mehor abastecer com alcool ou gasolina, ativando a opção consumo é possivel calcular o consumo de combustível do carro </string>
    <string name="txt_info_2">Se beber não dirija!</string>
    <string name="id_autor">Autor</string>
</resources>
